--- a/LOOPS.ipynb
+++ b/LOOPS.ipynb
@@ -665,8 +665,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7dad6a6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in 'python':\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "46a7ffa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mehreen\n",
+      "maryam\n",
+      "mehak\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ITERATE THROUGH A LIST USING LOOPS:\n",
+    "mylist = [\"mehreen\",\"maryam\",\"mehak\"]\n",
+    "for item in mylist:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a9c7fa01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "=====================================================\n",
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterate through a latrge number that is not a type of list:\n",
+    "# want to iterate through a 100 numbers\n",
+    "for i in range(10): #---> it is a number that i is iterate it strat from 0 till 99 100 is exculde\n",
+    "    print(i)\n",
+    "print(\"=====================================================\")\n",
+    "# iterate with a jump of 2 numbers\n",
+    "for i in range(1,10,2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6b406cc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate total cost of all the item:\n",
+    "price = [10,20,30]\n",
+    "sum = 0\n",
+    "for i in price:\n",
+    "    sum += i\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35afad76",
+   "metadata": {},
+   "source": [
+    "<h1 style = \"text-align: center;\">NESTED LOOPS</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b5180fdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0 , 0)\n",
+      "(0 , 1)\n",
+      "(0 , 2)\n",
+      "(0 , 3)\n",
+      "(1 , 0)\n",
+      "(1 , 1)\n",
+      "(1 , 2)\n",
+      "(1 , 3)\n",
+      "(2 , 0)\n",
+      "(2 , 1)\n",
+      "(2 , 2)\n",
+      "(2 , 3)\n",
+      "(3 , 0)\n",
+      "(3 , 1)\n",
+      "(3 , 2)\n",
+      "(3 , 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print like \n",
+    "# (x,y)\n",
+    "# (0,0)\n",
+    "# (0,1)\n",
+    "# (0,2)\n",
+    "# (0,3)\n",
+    "# (1,0)\n",
+    "# (1,1)\n",
+    "# (1,2)\n",
+    "\n",
+    "for i in range(4):\n",
+    "    for j in range(4):\n",
+    "        print(f\"({i} , {j})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c254cf84",
    "metadata": {},
    "outputs": [],
    "source": []
